# Tanara

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
cli/: CMakeLists.txt  main.cpp
cmake/: OnnxRuntimeWin.cmake
core/: CMakeLists.txt
core/include/tanara/: AppController.h  Logging.h  SettingsManager.h  SummaryService.h  TranscriptMerger.h  Types.h
core/include/tanara/audio/: AudioEngine.h  DeviceManager.h  DeviceMonitor.h  RecordingSession.h  RingBuffer.h
core/include/tanara/llm/: ILlmProvider.h  OpenAiCompatibleProvider.h
core/include/tanara/provider/: ProviderDescriptor.h  ProviderRegistry.h  ReadinessModel.h
core/include/tanara/store/: JsonSerialization.h  KeyStore.h  MeetingListModel.h  MeetingStore.h  PeopleStore.h  VoiceprintStore.h
core/include/tanara/stt/: ISttProvider.h  SonioxProvider.h
core/include/tanara/voiceid/: VoiceEmbedder.h
core/src/: AppController.cpp  Logging.cpp  SettingsManager.cpp  SummaryService.cpp  TranscriptMerger.cpp  Version.cpp
core/src/audio/: AudioEngine.cpp  DeviceManager.cpp  DeviceMonitor.cpp  RecordingSession.cpp
core/src/llm/: OpenAiCompatibleProvider.cpp
core/src/provider/: BuiltinProviders.cpp  ProviderRegistry.cpp  ReadinessModel.cpp
core/src/store/: JsonSerialization.cpp  KeyStore.cpp  MeetingListModel.cpp  MeetingStore.cpp  PeopleStore.cpp  VoiceprintStore.cpp
core/src/stt/: SonioxProvider.cpp
core/src/voiceid/: VoiceEmbedder.cpp
design/ui-mockups/: KonyvtarOtthon.ui  KonyvtarOtthon_stateA.ui  Onboarding.ui  RecorderFloating.ui  Settings.ui  TranscriptWidget.ui  _render.cpp
gui/: CMakeLists.txt
gui/src/: AppIcon.h  FloatingRecorder.cpp  FloatingRecorder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeetingItemDelegate.cpp  MeetingItemDelegate.h  MeetingTableModel.cpp  MeetingTableModel.h  ParticipantsDialog.cpp  ParticipantsDialog.h  PeopleManagerDialog.cpp  PeopleManagerDialog.h  RecordBar.cpp  RecordBar.h  RecordBar.ui  SettingsDialog.cpp  SettingsDialog.h  TracksPanel.cpp  TracksPanel.h  TranscriptPlayer.cpp  TranscriptPlayer.h  main.cpp
tests/: CMakeLists.txt
tests/unit/: test_merger.cpp  test_provider_registry.cpp  test_readiness.cpp  test_ringbuffer.cpp  test_smoke.cpp  test_store_settings.cpp  test_summary.cpp  test_voiceprint.cpp
